# SX70z

./: .gitignore  Readme.md
Code/: LICENSE
Code/SX70z_ESP/SX70_ModelZ/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Camera.md  TODO.md  sdkconfig.defaults
Code/SX70z_ESP/SX70_ModelZ/src/: CMakeLists.txt  PIN.h  camera_main.c  camera_main.h  devinfo.c  devinfo.h  display_manager.c  display_manager.h  flight_cfg.c  flight_cfg.h  font.h  gpio_inputs.c  gpio_inputs.h  opt4001.c  opt4001.h  ota_web.c  ota_web.h  pcf8575.c  pcf8575.h  pin_init.c  pin_init.h  shutter_cal.c  shutter_cal.h  ssd1306.c  ssd1306.h
Code/SX70z_ESP/SX70_ModelZ/src/fonts/: bdf2c.py  conv_icon.py  cross_14_14.c  flash_14_14.c  flight_13_13.c  font5x8.c  font5x8.h  font6x12.c  font6x12.h  font8x16.c  font8x16.h  plane2.c
Hardware/: LICENSE
Hardware/Body_controller/BodyControllerForSX70z/: BodyControllerForSX70z.kicad_pcb  BodyControllerForSX70z.kicad_prl  BodyControllerForSX70z.kicad_pro  BodyControllerForSX70z.kicad_sch  BodyControllerForSX70z_R1_1.step  fp-info-cache  fp-lib-table  sx-70-skin-back.dxf  sym-lib-table
Hardware/Body_controller/Case/: BodyControllerForSX70z_R1_0.SLDASM  BodyControllerForSX70z_R1_0.step  BodyControllerForSX70z_R1_1.SLDASM  垫片.SLDPRT  垫片.STL  外壳.3mf  外壳.SLDPRT  外壳.STL  外壳装配.SLDASM  大头拨轮.SLDPRT  贴片螺母M2.5-H3.5-D3.SLDPRT  贴片螺母M2.5-H8-D3.SLDPRT
Hardware/Body_controller/ref/: sx-70-skin-sholder.bak  sx-70-skin-sholder.dwg  (+3 more)
Hardware/TestBench/: MainStand.3mf  MainStand.SLDPRT  MainStand.STL  MainStandCover.SLDPRT  MainStandCover.STL  TestBench.SLDASM
(+80 files in other folders)
